# simpledie

./: .editorconfig  .gitignore  Cargo.toml  README.md
crates/modron/: Cargo.toml
crates/modron-toolkit/: Cargo.toml
crates/modron-toolkit/examples/: chromatic_orb.rs
crates/modron-toolkit/src/: daggerheart.rs  defs.rs  dh.rs  dnd.rs  lib.rs  print.rs
crates/modron/src/: approx.rs  die.rs  lib.rs  ops.rs  prelude.rs  util.rs  value.rs
crates/modron/src/die/: inner.rs  mod.rs  ptr.rs
examples/: duality.rs  expr.rs  fireball.ipynb  sum.rs
src/: approx.rs  defs.rs  die.rs  die_list.rs  duality.rs  expr.rs  lib.rs  operators.rs  ops.rs  prelude.rs  util.rs  value.rs
src/expr/: composite.rs  ext.rs  mod.rs  overloading.rs
