[workspace]
resolver = "3"
members = ["crates/modron", "crates/modron-toolkit"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
modron = { path = "crates/modron" }
modron-toolkit = { path = "crates/modron-toolkit" }

rand = "0.9.2"
bon = "3.8.1"

[workspace.lints.clippy]
penantic = "warn"
