[package]
name = "modron-toolkit"
version = "0.1.0"
edition.workspace = true

[dependencies]
modron.workspace = true
bon.workspace = true
plotters = { version = "0.3.7", default-features = false, features = ["area_series", "histogram", "point_series"] }
comfy-table = { version = "7.2.1", default-features = false }

[lints]
workspace = true
